# verus-finite

./: .gitignore  run.sh
finite_examples/: Finitization_Strategies.md  binarySearchExIncorrect.rs  binarySearchExIncorrect_finite.rs  binarySearchEx_finite.rs  indexUpToEx.rs  indexUpToEx_finite.rs  primeEx.rs  primeExLemma.rs  primeExLemma_finite.rs  primeEx_finite.rs  quantEx.rs  quantEx_finite.rs  triangleRecursionEx.rs  triangleRecursionEx_finite.rs
finite_examples/finiteNotConc/: binarySearchEx.rs  indexUpToEx_FiniteNotConcrete.rs  primeEx_finite.rs  triangle.rs
finite_examples/flowChartExamples/: binarySearchEx_LI_S_F.rs  binarySearchEx_LI_S_S.rs  indexUpTo_Assertion_F.rs  indexUpTo_Assertion_S.rs  indexUpTo_PC_F.rs  indexUpTo_PC_S.rs  primeEx_specAssertion_F.rs  primeEx_specAssertion_S.rs
finite_examples/scalableTests/: aggragate.sh  plotAll.sh  plotAllBSearch.sh  plotFiniteChart.sh  plotFiniteChartSummary.sh  runScaleNestedTest.sh  runScaleNestedTestAgg.sh  runScaleTest.sh
finite_examples/scalableTests/bsearch/: binary.rs  binarySearchEx.rs  binarySearchEx_time_log.csv  binary_search_finite_0.rs  binary_search_finite_1.rs  binary_search_finite_2.rs  binary_search_finite_3.rs  scaleTestBSearch.py  scaleTestBSearchSeparate.py
finite_examples/scalableTests/bsearchRange/: bOut.rs  binarySearchEx.rs  binarySearchExSplit.rs  binarySearchEx_time_log.csv  (+2 more)
source/: Cargo.toml  formatted_output.rs  metadata.json  output2.txt  output3.txt  output4.txt  output5.txt  prime.out
source/verus-prover-assistant/: Cargo.toml
source/verus-prover-assistant/src/: main.rs
(+32 files in other folders)
